  * Merged the non-windowed and windowed functions in the lsl.correlator extensions to de-duplicate some of the codebase
  * Added support for reading CASA measurement sets with multiple spectral windows
  * Added test suites for CASA measurement set support when the 'casacore' module is found
  * Added support for astorpy.units.quantity.Quantity instances to lsl.misc.rfutil
  * Removed lsl.misc.mathutil.savitzky_golay since it was added in scipy v0.14.0+
  * Added support for collecting usage data for LSL via lsl.misc.telemetry
  
1.2.5
  * Updated setup.py to make it more likely that clang will build OpenMP-enabled extensions
  * Updated the install documentation to recommend pip
  * Added a 4-tap + Hanning windowed polyphase filter bank to the various functions in lsl.correlator.fx
  * Added an option to use the new PFB in correlateTBN and correlateTBW
  * Added an option to use the new PFB in drxSpectra, tbnSpectra, and tbwSpectra
  * Added support for proper motions to the IDF format
  * Added support for storing source intentions in the CALCODE field in FITS IDI files
  * Updated the AIPY version requirement to >=3.0.1
  * Updated the scipy version requirement to >=0.19

1.2.4
  * Fixed a bug in driftcurve.py that put a cos(decliation) correction into the LFSM runs
  * Updated the documentation to reflect that unittest2 is now required as of 1.2.2 for Python 2.6 support
  * Added argparse as an extra dependency for Python 2.6
  * Moved the scripts that ship with LSL to argparse for command line parsing
  * Added a new lsl.misc.parser module to help with the switch over to argparse
  * Updated the minimum PyEphem version of 3.5.7.3
  * Fixed a bug in lsl.misc.ionosphere that causes some UQR files to fail to parse
  * Updated the URL/filename structure used to download the CODE files in lsl.misc.ionosphere
  * Added support for MCS MIBs stored as .gdb files
  * Added support for writing comments and history to FITS-IDI, SDFITS, and UVFITS files